--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -3,12 +3,14 @@ __pycache__/
 *.pyo
 *.pyd
 
-.env
-.venv
+.venv/
 venv/
 
-.git/
-.gitignore
+.env
+.env.*
 
-# NÃO ignore requirements.txt
+.git/
+.vscode/
+.idea/
+
 !requirements.txt
