Ajustes para o funcionamento do App no Docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,86 @@
+# services:
+#   db:
+#     image: mysql:8.4
+#     container_name: grfcourses_db
+#     command: >
+#       --character-set-server=utf8mb4
+#       --collation-server=utf8mb4_unicode_ci
+#     env_file:
+#       - .env
+#     environment:
+#       MYSQL_DATABASE: ${MYSQL_DATABASE:-grfcourses}
+#       MYSQL_USER: ${MYSQL_USER:-grfcourses}
+#       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-grfcourses}
+#       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpass}
+#     volumes:
+#       - db_data:/var/lib/mysql
+#     ports:
+#       - "${DB_PORT:-3306}:3306"
+#     healthcheck:
+#       test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -uroot -p$$MYSQL_ROOT_PASSWORD --silent"]
+#       interval: 5s
+#       timeout: 5s
+#       retries: 30
+#     restart: unless-stopped
+
+#   backend:
+#     build:
+#       context: ./backend
+#       dockerfile: Dockerfile
+#     container_name: grfcourses_backend
+#     env_file:
+#       - .env
+#     environment:
+#       DJANGO_DEBUG: ${DJANGO_DEBUG:-0}
+#       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY:-change-me}
+#       DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS:-localhost,127.0.0.1}
+#       DJANGO_CSRF_TRUSTED_ORIGINS: ${DJANGO_CSRF_TRUSTED_ORIGINS:-http://localhost:3000}
+
+#       DB_HOST: ${DB_HOST:-db}
+#       DB_NAME: ${DB_NAME:-grfcourses}
+#       DB_USER: ${DB_USER:-grfcourses}
+#       DB_PASSWORD: ${DB_PASSWORD:-grfcourses}
+#       DB_PORT_INTERNAL: ${DB_PORT_INTERNAL:-3306}
+
+#       # Stripe
+#       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY:-}
+
+#       GUNICORN_WORKERS: ${GUNICORN_WORKERS:-2}
+#       GUNICORN_THREADS: ${GUNICORN_THREADS:-4}
+#       GUNICORN_TIMEOUT: ${GUNICORN_TIMEOUT:-60}
+#     depends_on:
+#       db:
+#         condition: service_healthy
+#     volumes:
+#       - backend_static:/app/staticfiles
+#       - backend_media:/app/media
+#     ports:
+#       - "${BACKEND_PORT:-8000}:8000"
+#     restart: unless-stopped
+
+#   frontend:
+#     build:
+#       context: ./frontend
+#       dockerfile: Dockerfile
+#     container_name: grfcourses_frontend
+#     env_file:
+#       - .env
+#     environment:
+#       NODE_ENV: ${NODE_ENV:-production}
+#       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
+#       PORT: 3000
+#       HOSTNAME: 0.0.0.0
+#     depends_on:
+#       - backend
+#     ports:
+#       - "${FRONTEND_PORT:-3000}:3000"
+#     restart: unless-stopped
+
+# volumes:
+#   db_data:
+#   backend_static:
+#   backend_media:
+
 services:
   db:
     image: mysql:8.4
@@ -5,8 +88,6 @@ services:
     command: >
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_unicode_ci
-    env_file:
-      - .env
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE:-grfcourses}
       MYSQL_USER: ${MYSQL_USER:-grfcourses}
@@ -28,12 +109,10 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: grfcourses_backend
-    env_file:
-      - .env
     environment:
       DJANGO_DEBUG: ${DJANGO_DEBUG:-0}
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY:-change-me}
-      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS:-localhost,127.0.0.1}
+      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS:-localhost,127.0.0.1,backend}
       DJANGO_CSRF_TRUSTED_ORIGINS: ${DJANGO_CSRF_TRUSTED_ORIGINS:-http://localhost:3000}
       CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:3000}
 
@@ -51,9 +130,6 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    volumes:
-      - backend_static:/app/staticfiles
-      - backend_media:/app/media
     ports:
       - "${BACKEND_PORT:-8000}:8000"
     restart: unless-stopped
@@ -65,22 +141,23 @@ services:
       args:
         NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     container_name: grfcourses_frontend
-    env_file:
-      - .env
     environment:
       NODE_ENV: ${NODE_ENV:-production}
 
-      # Public (browser)
+      # Browser (client)
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
 
-      # Internal (server in docker)
+      # Server (container-to-container)
       API_URL: ${API_URL:-http://backend:8000}
 
       # Auth.js / NextAuth
-      AUTH_URL: ${AUTH_URL:-http://localhost:3000}
       NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
+      AUTH_URL: ${AUTH_URL:-http://localhost:3000}
       AUTH_TRUST_HOST: ${AUTH_TRUST_HOST:-true}
+
+      # SECRET obrigatório (para sumir MissingSecret)
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET:-change-me-super-secret-dev-key}
+      AUTH_SECRET: ${AUTH_SECRET:-change-me-super-secret-dev-key}
 
       PORT: 3000
       HOSTNAME: 0.0.0.0
@@ -92,5 +169,3 @@ services:
 
 volumes:
   db_data:
-  backend_static:
-  backend_media:
