--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,9 +48,9 @@ services:
       dockerfile: Dockerfile
     container_name: grfcourses_backend
     environment:
-      DJANGO_DEBUG: ${DJANGO_DEBUG:-0}
+      DJANGO_DEBUG: ${DJANGO_DEBUG:-1}
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY:-change-me}
-      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS:-localhost,127.0.0.1,backend}
+      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS:-localhost,127.0.0.1,backend,api}
       DJANGO_CSRF_TRUSTED_ORIGINS: ${DJANGO_CSRF_TRUSTED_ORIGINS:-http://localhost:3000}
       CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:3000}
 
@@ -81,14 +81,17 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        API_URL: ${API_URL:-http://backend:8000}
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     environment:
       NODE_ENV: ${NODE_ENV:-production}
 
-      # Browser (client)
-      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
-
       # Server (container-to-container)
       API_URL: ${API_URL:-http://backend:8000}
+
+      # Browser (client)
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
 
       # Auth.js / NextAuth
       NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
@@ -100,7 +103,7 @@ services:
       AUTH_SECRET: ${AUTH_SECRET:-change-me-super-secret-dev-key}
 
       PORT: 3000
-      HOSTNAME: 0.0.0.0
+      HOSTNAME: localhost
     depends_on:
       - backend
     restart: unless-stopped
